// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`unitInputField > should handles onChange and selection 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_xf61n40 uv_xf61n42d uv_xf61n45j"
      >
        <div
          class="uv_xf61n40 uv_xf61n4v uv_xf61n42j uv_xf61n45j"
        >
          <label
            class="uv_l58dz72 uv_1do42ls0 uv_1do42ls4 uv_1do42lsb uv_1do42lsn uv_1do42ls1a uv_1do42ls32"
            for="_r_c_"
          >
            Test
          </label>
          <span
            class="uv_1do42ls0 uv_1do42ls4 uv_1do42ls9 uv_1do42lsn uv_1do42ls1a uv_1do42ls2m"
          >
            *
          </span>
        </div>
        <div
          class="uv_gwf0flc uv_gwf0fl6 uv_gwf0fl5 uv_1w3vbem0"
          style="--uv_85qyp70: 1fr auto; --uv_85qyp71: 1fr auto; --uv_85qyp72: 1fr auto; --uv_85qyp73: 1fr auto; --uv_85qyp74: 1fr auto; --uv_85qyp75: 1fr auto;"
        >
          <div
            class="uv_gwf0flb"
            id="input-field"
          >
            <input
              aria-invalid="false"
              class="uv_gwf0fl2 uv_gwf0fl1"
              data-testid="unit-input"
              id="_r_c_"
              max="9007199254740991"
              min="0"
              name="test-value"
              placeholder="input"
              required=""
              step="1"
              type="number"
              value="100"
            />
          </div>
          <div
            aria-label="test-unit"
            class="uv_gwf0flg uv_gwf0flf uv_uf6pag0"
            style="--uv_gwf0fl0: 12.6rem;"
          >
            <div
              aria-controls="_r_k_"
              aria-describedby="_r_k_"
              class="uv_w40vpo9 uv_w40vpob"
              tabindex="-1"
            >
              <div
                class="uv_xf61n40 uv_xf61n42d uv_xf61n45j"
              >
                <div
                  aria-controls="_r_k_"
                  aria-expanded="false"
                  class="uv_r8qe46 uv_r8qe45 uv_r8qe4a uv_r8qe4e"
                  data-disabled="false"
                  data-readonly="false"
                  data-testid="select-input-test-unit"
                  id="unit"
                  role="combobox"
                  tabindex="0"
                >
                  <span
                    class="uv_r8qe4m uv_1do42ls0 uv_1do42ls4 uv_1do42lsb uv_1do42lsj uv_1do42ls1a uv_1do42ls32"
                  >
                    Days
                  </span>
                  <div
                    class="uv_r8qe42 uv_xf61n40 uv_xf61n4d uv_xf61n42j uv_xf61n43p"
                  >
                    <svg
                      aria-hidden="true"
                      class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkz9 uv_icons_1sbwqkzf uv_icons_1sbwqkz1i"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <button
        class="uv_8xt08s0 uv_8xt08s1 uv_8xt08s3 uv_8xt08s9 uv_8xt08se uv_8xt08si uv_8xt08sl"
        type="submit"
      >
        Submit
      </button>
    </form>
  </div>
</DocumentFragment>
`;

exports[`unitInputField > should render correctly 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_xf61n40 uv_xf61n42d uv_xf61n45j"
      >
        <label
          class="uv_l58dz72 uv_1do42ls0 uv_1do42ls4 uv_1do42lsb uv_1do42lsn uv_1do42ls1a uv_1do42ls32"
          for="_r_0_"
        >
          Test
        </label>
        <div
          class="uv_gwf0flc uv_gwf0fl6 uv_gwf0fl5 uv_1w3vbem0"
          style="--uv_85qyp70: 1fr auto; --uv_85qyp71: 1fr auto; --uv_85qyp72: 1fr auto; --uv_85qyp73: 1fr auto; --uv_85qyp74: 1fr auto; --uv_85qyp75: 1fr auto;"
        >
          <div
            class="uv_gwf0flb"
            id="input-field"
          >
            <input
              aria-invalid="false"
              class="uv_gwf0fl2 uv_gwf0fl1"
              data-testid="unit-input"
              id="_r_0_"
              max="9007199254740991"
              min="0"
              name="test-value"
              placeholder="0"
              step="1"
              type="number"
            />
          </div>
          <div
            aria-label="test-unit"
            class="uv_gwf0flg uv_gwf0flf uv_uf6pag0"
            style="--uv_gwf0fl0: 12.6rem;"
          >
            <div
              aria-controls="_r_6_"
              aria-describedby="_r_6_"
              class="uv_w40vpo9 uv_w40vpob"
              tabindex="-1"
            >
              <div
                class="uv_xf61n40 uv_xf61n42d uv_xf61n45j"
              >
                <div
                  aria-controls="_r_6_"
                  aria-expanded="false"
                  class="uv_r8qe46 uv_r8qe45 uv_r8qe4a uv_r8qe4e"
                  data-disabled="false"
                  data-readonly="false"
                  data-testid="select-input-test-unit"
                  id="unit"
                  role="combobox"
                  tabindex="0"
                >
                  <span
                    class="uv_r8qe44 uv_1do42ls0 uv_1do42ls7 uv_1do42lsb uv_1do42lsj uv_1do42ls1d uv_1do42ls35"
                    style="--uv_1giziax1: nowrap;"
                  >
                    Select item
                  </span>
                  <div
                    class="uv_r8qe42 uv_xf61n40 uv_xf61n4d uv_xf61n42j uv_xf61n43p"
                  >
                    <svg
                      aria-hidden="true"
                      class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkz9 uv_icons_1sbwqkzf uv_icons_1sbwqkz1i"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;
